# envreport

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  envdiffer.py  envreport-magic.ipynb  envreport.py  example-report.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
tests/: test_envreport.py
