# PEP 621 build info
[build-system]
requires = ["setuptools>=61", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Project metadata
# ref: https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[project]
name = "envreport"
version = "0.0.1.dev"
dynamic = ["readme"]
description = "envreport: compare environments"
authors = [
  { name = "Min RK", email = "benjaminrk@gmail.com" },
]
keywords = ["Environment"]
license = { text = "MIT" }
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Operating System :: POSIX",
]

[project.urls]
Source = "https://github.com/minrk/envreport"
Tracker = "https://github.com/minrk/envreport/issues"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[project.scripts]
envreport = "envreport:main"

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE"]
py-modules = ["envreport"]
packages = []

# dynamic sources of metadata in other files
[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }

# setuptools_scm needs a section to be present
[tool.setuptools_scm]
# we don't actually use setuptools_scm for versions,
# only the file-finder
fallback_version = "0.0.0"

# tbump is used to simplify and standardize the release process when updating
# the version, making a git commit and tag, and pushing changes.
#
# ref: https://github.com/your-tools/tbump#readme
#
[tool.tbump]
# Uncomment this if your project is hosted on GitHub:
github_url = "https://github.com/minrk/envreport"

[tool.tbump.version]
current = "0.0.1.dev"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+)|)
  \.?
  (?P<dev>(?<=\.)dev\d*|)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# pyproject.toml location.

[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "envreport.py"

[tool.ruff.lint]
ignore = [
    "F841", # unused variable
]
select = [
    "D1", # docstrings
    "E7", # comparisons
    "E9", # syntax
    "I", # isort
    "UP", # pyupgrade
    "F", # flake8
]

[tool.ruff.extend-per-file-ignores]
"tests/*" = ["D"]

[tool.pytest.ini_options]
addopts = "--verbose --color=yes --durations=10 --cov=envreport"
testpaths = ["tests"]
